Deal with files and urls -> SH